# MEG_model

./: .gitignore  1  README.md  ablation.py  aggregated_metrics.csv  config.py  main.py  pretrain.py  pyproject.toml  test.py
CNN/: cnn_lstm_model.py
ablation_study/ablation_configs_10_repeats_20250618_153412/: all_cross_r0_metrics.json  all_cross_r1_metrics.json  all_cross_r2_metrics.json  all_cross_r3_metrics.json  all_cross_r4_metrics.json  all_cross_r5_metrics.json  all_cross_r6_metrics.json  all_cross_r7_metrics.json  all_cross_r8_metrics.json  all_cross_r9_metrics.json  all_intra_r0_metrics.json  all_intra_r1_metrics.json  all_intra_r2_metrics.json  all_intra_r3_metrics.json  all_intra_r4_metrics.json  all_intra_r5_metrics.json  all_intra_r6_metrics.json  all_intra_r7_metrics.json  all_intra_r8_metrics.json  all_intra_r9_metrics.json  baseline_no_pretrain_cross_r0_metrics.json  baseline_no_pretrain_cross_r1_metrics.json  baseline_no_pretrain_cross_r2_metrics.json  (+137 more)
configs/: ablation_configs.json  ablation_configs_10_repeats.json  ablation_configs_test.json  ablation_configs_test_short_repeat_2.json
data/: dataloader.py
models/: __init__.py  autoencoders.py  image_models.py  models.py  sequence_models.py  sequence_models.py.py  spatial_models.py  transformer_model.py
scripts/: aggregate_runs.py  dataloader.py  process_meg_data.py  refactored_dataloader.py  visualize_runs.py
training/: ablation.py  pretrain.py  pretrain_cnn.py  pretrain_transformer.py  train.py
transformer/: transformer_model.py
utils/: __init__.py
(+17 files in other folders)
