[tool.poetry]
name = "meg-model"
version = "0.1.0"
description = ""
authors = ["Dorus <doruskeijzer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = "^2.7.1"
matplotlib = "^3.10.3"
numpy = "^2.3.0"
mne = "^1.9.0"
h5py = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
